Notes: some edits

--- a/notes/units/3/1-problem-solving/1.5-problems.md
+++ b/notes/units/3/1-problem-solving/1.5-problems.md
@@ -28,4 +28,5 @@ which isn't *computable*.
                        program with given inputs will halt?
 
 It has been proved that it is **impossible** to write a program to determine, in
-general, if a given program will halt with given input.
+general, if a given program will halt with given input. That is to say, **the
+halting problem is unsolvable.**
