--- a/notes/units/3/2-programming-concepts/2.1-paradigms.md
+++ b/notes/units/3/2-programming-concepts/2.1-paradigms.md
@@ -3,37 +3,41 @@ Programming paradigms
 
 ### Imperative/procedural programming
 
-  * Specify sequence of operations which change the program's state
+  * Specify sequence of operations in order to change the **program's state**
+  * e.g. Java (with OOP features)
 
 
 ### Functional programming
 
-  * Programs define mathematical functions
+  * Programs define **mathematical functions**
   * A solution to a problem consists of series of **function calls**
   * No variables, assignments
-  * Lists, functions manipulates lists
+  * There are *lists* and *functions* that manipulate lists
+  * e.g. Haskell
 
 
 ### Logic programming
 
-  * Consists of **facts and rules**
-  * Knowledge base is built up through writing facts & rules about a 'specific
-    area of expertise (? TODO)
-  * Inference engine with the ability to backtrack will use that knowledge base
-  * e.g. Prolog
-
-TODO
+  * A **knowledge base** is built up through writing **facts & rules** about a
+    *'specific area of expertise'* (wtf)
+  * Next, an **inference engine** with the ability to *backtrack* will use the
+    knowledge base to answer queries (by responding to a **goal**)
+  * e.g. Prolog (often used for AI)
 
 
 ### Event-driven programming
 
   * Subroutines are executed **in response to events**, rather than in an order
-    specified by the programmer.
+    specified by the programmer
+  * All about having a **system loop** running from application life to death
+  * If several events occur, they are put in a queue and the relevant handlers
+    are executed in turn
   * e.g. most GUI frameworks
 
 
 ### Object-oriented programming
 
-  * TODO
-  * Basically all about building complex concepts from little blocks
+  * Build complex concepts/solve complex problems from putting together smaller
+    blocks
+  * Separation of concerns
   * Makes different levels of abstraction clear and separate
