--- a/notes/units/3/6-communications-and-networking/6.2-networks.md
+++ b/notes/units/3/6-communications-and-networking/6.2-networks.md
@@ -15,3 +15,54 @@ TODO
 
 In a star network, each computer is connected via a single link to a **central
 computer**. So it looks like a star going outwards from the main node.
+
+
+### Subnets
+
+*Note: In the course, it seems they prefer you to use the name* ***network ID***
+*rather than the Wikipedia equivalent, network prefix. I'll use the proper
+one, but keep it in mind.*
+
+*Note note: I might be wrong because a network ID may be something slightly
+different, but it won't matter for the exam :)*
+
+A **subnet** is a subdivision of an IP network. If a computer is in the same
+subnet as another computer, then they can communicate directly. Otherwise,
+requests must go through some other device (>1 router?). Thus subnets are
+usually used for performance and security reasons.
+
+Computers that belong in the same subnet have a common part in their IP
+addresses. Look at the following IPs:
+
+  * 192.168.1.1
+  * 192.168.1.107
+
+As you can see, you can divide an IP address into two parts: the identical part
+is known as the **network prefix**, and the other bit is the **host
+identifier**. That's good: because of the ordering, computers can easily tell
+whether two hosts are in the same network.
+
+...I may have told a bit of a lie back there! My example only works in
+situations where there is **no subnetting** (or there is only one subnet
+available). In reality, because of the reasons above, networks use **subnets**,
+where the subnet number is known from part of the host number. Each IP address
+has an associated **subnet mask** that determines which subnet it is a part of.
+The name 'subnet mask' comes from the fact that it is applied as a bitmask to IP
+addresses.
+
+To determine the network prefix of an IP address, you AND the IP address
+together with the subnet mask.
+
+
+### Exam question: different networks
+
+Simplified from qu. 3d from COMP3 Jun15:
+
+  > Explain how a desktop computer with IP address 192.168.0.2 and subnet mask
+  > 255.255.255.0 will use the subnet mask to determine that the data it wants
+  > to send to an FTP server at 67.84.23.102 must be sent over the Internet
+  > rather than locally.
+
+*A:* An AND operation is performed using the host computer's subnet mask and
+each IP address in turn, to produce two network IDs. If these are different,
+then the desktop computer knows that the computers reside on different networks.
